--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "stripe": "^8.61.0"
   }
 }
