--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-stripe-elements": "^6.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:**",
+    "start:app": "react-scripts start",
     "start:lambda": "netlify-lambda serve src/lambda",
-    "build": "react-scripts build",
+    "build": "run-p build:**",
+    "build:app": "react-scripts build",
+    "build:lambda": "netlify-lambda build src/lambda",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,6 +39,7 @@
   },
   "devDependencies": {
     "netlify-lambda": "^1.6.3",
+    "npm-run-all": "^4.1.5",
     "stripe": "^8.61.0"
   }
 }
