--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,14 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.REACT_APP_STRIPE_TEST
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-/src/keys.js
